<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonUzbek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_uz" />

        <Button
            android:id="@+id/buttonRussian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_ru" />

        <Button
            android:id="@+id/buttonEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_en" />


        <Button
            android:id="@+id/buttonDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dark" />

        <Button
            android:id="@+id/buttonLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="light" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>