<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="14dp"
            android:fontFamily="@font/myid_bold"
            android:text="@string/tv_welcome"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/layout_phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/myid_medium"
            android:preferKeepClear="true"
            android:textAlignment="center"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/layout_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
            app:prefixText="+998"
            app:prefixTextAppearance="@font/my_prefix"
            app:prefixTextColor="@color/text_primary">

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_input"
                android:fontFamily="@font/myid_medium"
                android:hint="@string/enter_phone_uz"
                android:inputType="phone"
                android:maxLength="12"
                android:textColor="@color/black"
                android:textColorHint="#8E8E93"
                android:textSize="18sp"
                app:mask="## ###-##-##" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myid_medium"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/layout_continue"
            app:layout_constraintEnd_toEndOf="@+id/layout_phone"
            app:layout_constraintStart_toStartOf="@+id/layout_phone"
            app:layout_constraintTop_toBottomOf="@+id/layout_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_input"
                android:fontFamily="@font/myid_medium"
                android:hint="@string/enter_password_uz"
                android:inputType="textPassword"
                android:maxLength="9"
                android:textColor="@color/black"
                android:textColorHint="#8E8E93" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/layout_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/tvOffer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_password">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnContinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="14dp"
                android:background="@drawable/bg_btn_continue"
                android:text="Davom ettirish"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </FrameLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOffer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_light"
            android:text="@string/offer_uz"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/layout_continue"
            app:layout_constraintRight_toRightOf="@+id/layout_continue"
            app:layout_constraintTop_toBottomOf="@+id/layout_continue" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/layout_continue"
            app:layout_constraintTop_toTopOf="@+id/layout_continue">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/white"
                android:progressDrawable="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSupport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:text="@string/support_uz"
        android:textColor="@color/uzum_primary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="Ro`yxatdan o`tish"
        android:textColor="@color/uzum_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/translate"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:src="@drawable/ic_translate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>